--- a/css/main.css
+++ b/css/main.css
@@ -366,6 +366,7 @@ html {
     .responsive-header #cancelButton{
         border: 0;
         background: none;
+        color:black;
         cursor: pointer;
         font-size: 3.0rem;
         font-family: light;
